chore: 用新的api 重构项目

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title><%= locals.title %>- Microblog</title>
+	<link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<link rel="stylesheet" href="/stylesheets/bootstrap.css" />
 	<style type="text/css">
-		body{
+		body {
 			padding-top: 60px;
 			padding-bottom: 40px;
 		}
@@ -50,7 +52,7 @@
 		<%- body %>
 		<hr />
 		<footer>
-			<p><a href="http://www.byvoid.com/" target="_blank">Twittytop</a> 2016</p>
+			<p><a href="http://tuhongwei.github.io" target="_blank">Twittytop</a> 2022</p>
 		</footer>
 	</div>
 </body>
