--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,7 +31,7 @@
 							<li><a href="/login">登入</a></li>
 							<li><a href="/reg">注册</a></li>
 						<% }else{ %>
-							<li><a href="/loginout">登出</a></li>
+							<li><a href="/logout">登出</a></li>
 						<% } %>
 					</ul>
 				</div>
